# koreanmarket

./: .env.example  .gitignore  DEPLOY.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: settings.py  universe.py
dashboard/: app.py
data/real_snapshot/: companies.csv  fundamentals.csv  investor_flows.csv  prices.csv
scripts/: bootstrap_db.py  ingest_real.py  seed_synthetic.py
src/: __init__.py  cli.py  logging_setup.py  utils.py
src/analysis/: explain.py  fundamental.py  sentiment.py  supply_demand.py  technical.py
src/backtest/: engine.py  metrics.py
src/ingestion/: backfill.py  financials.py  investor_flows.py  market_data.py  news.py
src/reporting/: weekly_report.py
src/scheduler/: weekly_job.py
src/scoring/: composite.py  factors.py  projection.py
src/storage/: db.py  models.py  repository.py  snapshot.py
tests/: test_backtest.py  test_db_bootstrap.py  test_scoring.py  test_settings.py  test_technical.py
