[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-market-analyzer"
version = "0.1.0"
description = "Research/decision-support engine producing ranked, probabilistic weekly projections for KOSPI/KOSDAQ stocks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "spk52" }]

dependencies = [
    # --- market & filing data ---
    "pykrx>=1.0.45",
    "OpenDartReader>=0.2.1",
    # --- data wrangling ---
    "pandas>=2.1",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b0",
    # --- storage ---
    "SQLAlchemy>=2.0",
    # --- ingestion (news / http) ---
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "lxml>=5.0",
    # --- scheduling ---
    "APScheduler>=3.10",
    # --- config ---
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    # --- NLP / report synthesis ---
    "anthropic>=0.40",
    # --- cli / logging niceties ---
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
dashboard = [
    "streamlit>=1.36",
]

[project.scripts]
kma = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["config", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
